# reverse-os

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
api/v1/endpoints/: auth.py  orders.py  returns.py  webhooks.py
api/v1/endpoints/admin/: auth.py  financial.py  ksef.py  (+4 more)
core/: config.py
core/database/: session.py
core/licensing/: __init__.py  keygen.py  license.py
core/models/: __init__.py  audit_log_model.py  customer_model.py  order_model.py  pii_vault_model.py  refund_model.py  return_model.py  rule_execution_log_model.py  rule_set_model.py  user_model.py  voucher_model.py
core/security/: jwt.py  pii.py  rbac.py  return_token.py  session.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/redeem/: route.ts
frontend/app/return/: page.tsx
frontend/components/steps/: StepConfirmation.tsx  StepItemSelect.tsx  StepOrderVerify.tsx  StepReturnMethod.tsx
frontend/components/ui/: Button.tsx  ProgressBar.tsx
frontend/lib/: admin-api.ts  api.ts  constants.ts
integrators/ecommerce/: base.py  magento.py  shopify.py  woocommerce.py
integrators/logistics/: base.py  inpost.py
integrators/payments/: base.py  payu.py  stripe.py
migrations/: 001_initial_schema.sql  002_seed_rules.sql
modules/returns/: financial.py  ksef_export.py  service.py
modules/rule_engine/: engine.py
tests/: conftest.py
tests/unit/: test_pii.py  test_rule_engine.py  test_state_machine.py
workers/: celery_app.py  tasks.py
(+7 files in other folders)
